--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -1,143 +1,63 @@
 <loading-component [isLoading]="isLoading"></loading-component>
 <div class="row" *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
-    <div class="col-md-9">
+    <div class="row col-md-8">
+
         <div class="row">
             <div class="col-md-12 col-xs-12 form-group">
-                <label for="addonproductname">Bed Name</label>
-                <input type="text" placeholder="Enter Bed Name" class="form-control input-group-lg">
+                <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
+                    <label>{{ 'Bed Name' | translate }}</label>
+                    <input type="text" class="form-control" placeholder="{{ 'Bed Name' | translate }}" ngControl="name">
+                </div>
+                <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the bed' | translate }}</small></label>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12 col-xs-12">
 
-                <label class="control-label">Base Bed Type</label>
-
-                <div class="form-group btn-group bed-group" role="group">
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="button-radio">
-                        <div class="info-block block-info clearfix">
-                            <div data-toggle="buttons">
-                                <label class="btn btn-default">
-                                    <div class="bizcontent">
-                                        <input type="radio" name="var_id[]" autocomplete="off" value="">
-                                        <span class="glyphicon glyphicon-ok glyphicon-lg"></span>
-                                    </div>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+                <label class="control-label">{{ 'Bed Type' | translate }}</label>
 
             </div>
         </div>
 
-        <hr/>
+    </div>
 
+    <div class="row col-md-12">
+        <div class="row">
+            <div class="col-md-12 col-xs-12">
+                <div class="row" data-toggle="buttons">
+                    <div class="col-md-2 button-items" *ngFor="#bedTemplate of bedTemplateList">
+                        <label class="btn btn-default btn-group" [ngClass]="{ active: bedTemplate.id == bedVM.bed.bedTemplateId }" (click)="bedVM.bed.bedTemplateId=bedTemplate.id">
+                            <i class="fa-4x" [ngClass]="bedTemplate.iconUrl"></i>
+                            <!--<input type="radio" class="th-radio-input" name="bedType" (change)="typeChanged()">-->
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr/>
+    </div>
+
+    <div class="row col-md-8">
         <div class="row">
             <div class="col-md-6 col-xs-12">
                 <label for="bedcap">Capacity</label>
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon1"><i class="fa fa-male"></i></span>
-                            <input type="number" placeholder="Adults" class="form-control">
+                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxAdults')}">
+                            <span class="input-group-addon"><i class="fa fa-male"></i></span>
+                            <input type="number" class="form-control" placeholder="{{ 'Adults' | translate }}" ngControl="maxAdults">
                         </div>
+                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of adults' | translate }}</small></label>
                     </div>
 
                     <div class="col-xs-6">
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon2"><i class="fa fa-child"></i></span>
-                            <input type="number" placeholder="Children" class="form-control">
+                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxChildren')}">
+                            <span class="input-group-addon"><i class="fa fa-child"></i></span>
+                            <input type="number" class="form-control" placeholder="{{ 'Children' | translate }}" ngControl="maxChildren">
                         </div>
-
+                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of children' | translate }}</small></label>
                     </div>
                 </div>
 
@@ -148,18 +68,23 @@
             <div class="col-md-6 col-xs-12 form-group">
                 <label for="bedcap">Dimensions <small>in cm</small></label>
                 <div class="row">
+
                     <div class="col-xs-6">
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon4"><i class="fa fa-arrows-h"></i></span>
-                            <input type="number" placeholder="Width" class="form-control">
+                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('width')}">
+                            <span class="input-group-addon"><i class="fa fa-arrows-h"></i></span>
+                            <input type="number" class="form-control" placeholder="{{ 'Width' | translate }}" ngControl="width">
                         </div>
+                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid bed width' | translate }}</small></label>
                     </div>
+
                     <div class="col-xs-6">
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon3"><i class="fa fa-arrows-v"></i></span>
-                            <input type="number" placeholder="Length" class="form-control">
+                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('length')}">
+                            <span class="input-group-addon"><i class="fa fa-arrows-v"></i></span>
+                            <input type="number" class="form-control" placeholder="{{ 'Length' | translate }}" ngControl="length">
                         </div>
+                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid bed length' | translate }}</small></label>
                     </div>
+
                 </div>
             </div>
 
@@ -169,17 +94,32 @@
 
         <div class="row">
             <div class="col-md-12 col-xs-12 form-group">
-                <label for="notesproduct">Notes</label>
-                <textarea class="form-control" placeholer="Message"></textarea>
+                <label for="notesproduct">{{ 'Notes' | translate }}</label>
+                <textarea class="form-control" ngControl="notes"></textarea>
             </div>
         </div>
 
     </div>
 
-    <div class="col-md-3">
-        <button type="button" class="btn btn-block btn-warning button-cancel"><i class="fa fa-ban"></i> Cancel</button>
-        <button type="button" class="btn btn-block btn-info button-copy"><i class="fa fa-clone"></i> Copy</button>
-        <button type="button" class="btn btn-block btn-success button-save"><i class="fa fa-floppy-o"></i> Save Changes</button>
+    <div class="row">
+        <div class="col-xs-8">
+        </div>
+        <div class="col-xs-4">
+            <button type="button" class="btn btn-primary btn-block" *ngIf="!isNewBed()" (click)="saveBed()">
+                <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
+            </button>
+            <button type="button" class="btn btn-primary btn-block" *ngIf="isNewBed()" (click)="saveBed()">
+                <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Add Bed' | translate }}
+            </button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-8">
+        </div>
+        <div class="col-xs-4">
+            <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
+        </div>
     </div>
 
 </div>
