--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -1,5 +1,7 @@
 <div class="overview-left" [ngClass]="{'col-sm-9': !isEditing, 'col-sm-3': isEditing}">
-	<lazy-loading-table>
+	<lazy-loading-table
+		[isCollapsed]="isEditing" 
+		>
 	</lazy-loading-table>
 </div>
 <div class="col-sm-3 overview-right hidden-xs hidden-sm" *ngIf="!isEditing">
