--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -1,110 +1,112 @@
 <loading-component [isLoading]="isLoading"></loading-component>
 <div class="row" *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
-    <div class="row col-md-8">
 
-        <div class="row">
-            <div class="col-md-12 col-xs-12 form-group">
-                <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-                    <label>{{ 'Bed Name' | translate }}</label>
-                    <input type="text" class="form-control" placeholder="{{ 'Bed Name' | translate }}" ngControl="name">
-                </div>
-                <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the bed' | translate }}</small></label>
-            </div>
+    <div class="row">
+        <div class="col-md-2">
+            <label for="notesproduct">{{ 'Name' | translate }}</label>
         </div>
-
-        <div class="row">
-            <div class="col-md-12 col-xs-12">
-
-                <label class="control-label">{{ 'Bed Type' | translate }}</label>
-
+        <div class="col-md-6">
+            <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
+                <input type="text" class="form-control" placeholder="{{ 'Bed Name' | translate }}" ngControl="name">
             </div>
+            <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the bed' | translate }}</small></label>
         </div>
-
-    </div>
-
-    <div class="row col-md-12">
-        <div class="row">
-            <div class="col-md-12 col-xs-12">
-                <div class="row" data-toggle="buttons">
-                    <div class="col-md-2 button-items" *ngFor="#bedTemplate of bedTemplateList">
-                        <label class="btn btn-default btn-group" [ngClass]="{ active: bedTemplate.id == bedVM.bed.bedTemplateId }" (click)="bedVM.bed.bedTemplateId=bedTemplate.id">
-                            <i class="fa-4x" [ngClass]="bedTemplate.iconUrl"></i>
-                            <!--<input type="radio" class="th-radio-input" name="bedType" (change)="typeChanged()">-->
-                        </label>
-                    </div>
-                </div>
-            </div>
+        <div class="col-md-4">
         </div>
-
-        <hr/>
-    </div>
-
-    <div class="row col-md-8">
-        <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <label for="bedcap">Capacity</label>
-                <div class="row">
-                    <div class="col-xs-6">
-                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxAdults')}">
-                            <span class="input-group-addon"><i class="fa fa-male"></i></span>
-                            <input type="number" class="form-control" placeholder="{{ 'Adults' | translate }}" ngControl="maxAdults">
-                        </div>
-                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of adults' | translate }}</small></label>
-                    </div>
-
-                    <div class="col-xs-6">
-                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxChildren')}">
-                            <span class="input-group-addon"><i class="fa fa-child"></i></span>
-                            <input type="number" class="form-control" placeholder="{{ 'Children' | translate }}" ngControl="maxChildren">
-                        </div>
-                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of children' | translate }}</small></label>
-                    </div>
-                </div>
-
-                <label class="text-muted"><small><i class="fa fa-info-circle"></i> Each adult is replaceable with a child. Max Adults: 2 Max Children: 1 OR Max Adults: 1 Max Children: 2 OR Max Children: 3</small></label>
-
-            </div>
-
-            <div class="col-md-6 col-xs-12 form-group">
-                <label for="bedcap">Dimensions <small>in cm</small></label>
-                <div class="row">
-
-                    <div class="col-xs-6">
-                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('width')}">
-                            <span class="input-group-addon"><i class="fa fa-arrows-h"></i></span>
-                            <input type="number" class="form-control" placeholder="{{ 'Width' | translate }}" ngControl="width">
-                        </div>
-                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid bed width' | translate }}</small></label>
-                    </div>
-
-                    <div class="col-xs-6">
-                        <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('length')}">
-                            <span class="input-group-addon"><i class="fa fa-arrows-v"></i></span>
-                            <input type="number" class="form-control" placeholder="{{ 'Length' | translate }}" ngControl="length">
-                        </div>
-                        <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid bed length' | translate }}</small></label>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-
-        <hr>
-
-        <div class="row">
-            <div class="col-md-12 col-xs-12 form-group">
-                <label for="notesproduct">{{ 'Notes' | translate }}</label>
-                <textarea class="form-control" ngControl="notes"></textarea>
-            </div>
-        </div>
-
     </div>
 
     <div class="row">
-        <div class="col-xs-8">
+        <div class="col-md-2">
+            <label class="control-label">{{ 'Type' | translate }}</label>
         </div>
-        <div class="col-xs-4">
+        <div class="col-md-10">
+            <div class="row" data-toggle="buttons">
+                <div class="col-md-3 button-items" *ngFor="#bedTemplate of bedTemplateList">
+                    <label class="btn btn-default btn-group" [ngClass]="{ active: bedTemplate.id == bedVM.bed.bedTemplateId }" (click)="bedVM.bed.bedTemplateId=bedTemplate.id">
+                        <i class="fa-4x" [ngClass]="bedTemplate.iconUrl"></i>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <div class="row">
+        <div class="col-md-2">
+            <label>{{ 'Capacity' | translate }}</label>
+        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxAdults')}">
+                        <span class="input-group-addon"><i class="fa fa-male"></i></span>
+                        <input type="number" class="form-control" placeholder="{{ 'Adults' | translate }}" ngControl="maxAdults">
+                    </div>
+                    <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of adults' | translate }}</small></label>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxChildren')}">
+                        <span class="input-group-addon"><i class="fa fa-child"></i></span>
+                        <input type="number" class="form-control" placeholder="{{ 'Children' | translate }}" ngControl="maxChildren">
+                    </div>
+                    <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of children' | translate }}</small></label>
+                </div>
+            </div>
+
+            <label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'Each adult is replaceable with a child. Max Adults: 2 Max Children: 1 OR Max Adults: 1 Max Children: 2 OR Max Children: 3' | translate }}</small></label>
+        </div>
+
+        <div class="col-md-4">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2">
+            <label>{{ 'Dimensions' | translate }}</label>
+        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('width')}">
+                        <span class="input-group-addon"><i class="fa fa-arrows-h"></i></span>
+                        <input type="number" class="form-control" placeholder="{{ 'Width' | translate }}" ngControl="width">
+                    </div>
+                    <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid bed width' | translate }}</small></label>
+                </div>
+
+                <div class="col-xs-6">
+                    <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('length')}">
+                        <span class="input-group-addon"><i class="fa fa-arrows-v"></i></span>
+                        <input type="number" class="form-control" placeholder="{{ 'Length' | translate }}" ngControl="length">
+                    </div>
+                    <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid bed length' | translate }}</small></label>
+                </div>
+            </div>
+
+            <label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'Dimensions are expressed in cm' | translate }}</small></label>
+        </div>
+
+        <div class="col-md-4">
+        </div>
+    </div>
+
+    <hr/>
+
+    <div class="row">
+        <div class="col-md-2">
+            <label for="notesproduct">{{ 'Notes' | translate }}</label>
+        </div>
+        <div class="col-md-6">
+            <textarea class="form-control" ngControl="notes"></textarea>
+        </div>
+        <div class="col-md-4">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-8">
+        </div>
+        <div class="col-md-4">
             <button type="button" class="btn btn-primary btn-block" *ngIf="!isNewBed()" (click)="saveBed()">
                 <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
             </button>
@@ -115,9 +117,9 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-8">
+        <div class="col-md-8">
         </div>
-        <div class="col-xs-4">
+        <div class="col-md-4">
             <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
         </div>
     </div>
