price product edit - partial work

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -39,5 +39,9 @@
 	</price-product-overview>
 </div>
 <div class="col-sm-9 singleview-right" *ngIf="isEditing">
-	
+	<price-product-edit-container
+		*ngIf="selectedPriceProductVM" 
+		[priceProductVM]="selectedPriceProductVM"
+		(onExit)="showViewScreen()">
+	</price-product-edit-container>
 </div>
