--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-md-2">
-            <label for="notesproduct">{{ 'Name' | translate }}</label>
+            <label>{{ 'Name' | translate }}</label>
         </div>
         <div class="col-md-6">
             <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
@@ -94,7 +94,7 @@
 
     <div class="row">
         <div class="col-md-2">
-            <label for="notesproduct">{{ 'Notes' | translate }}</label>
+            <label>{{ 'Notes' | translate }}</label>
         </div>
         <div class="col-md-6">
             <textarea class="form-control" ngControl="notes"></textarea>
